# whatplane

./: README.md
binder/: README.md  example-notebook.ipynb  hello.py
local-notebook/: pyproject.toml
