[tool.poetry]
name = "local-notebook"
version = "0.1.0"
description = ""
authors = ["Francis Newson <francis.newson@tessella.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jupyterlab = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
